# synth-cryo-em

./: .coverage  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  README.md  index.html  mkdocs.yml  objects.inv  publish.sh  pyproject.toml
.github/workflows/: docs.yml  publish.yml  test.yml
api/: index.html
docs/: api.md  index.md  science.md  usage.md
notebooks/: interactive_tutorial.ipynb  quickstart_cryo_em.ipynb  visual_tutorial.ipynb
science/: index.html
src/synth_cryo_em/: __init__.py  cli.py  core.py  validate.py
tests/: test.cif  test_cli.py  test_core.py  test_coverage_expansion.py  test_empirical.py  test_real_data.py  test_robustness.py  test_scientific_validity.py  test_validate.py
usage/: index.html
